# enterprise_extensions

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  pip-install  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: .codecov.yml
.github/workflows/: ci_test.yml
docs/: Makefile  conf.py  enterprise_extensions.chromatic.rst  enterprise_extensions.frequentist.rst  enterprise_extensions.jax.rst  enterprise_extensions.rst  index.rst  installation.rst  make.bat  modules.rst  nonlinear_timing_example.rst  requirements_docs.txt  usage.rst
enterprise_extensions/: __init__.py  blocks.py  checks.py  deterministic.py  dropout.py  empirical_distr.py  enterprise_base.py  gp_kernels.py  hypermodel.py  load_feathers.py  mdels-20200220.py  model_orfs.py  model_utils.py  models.py  models_2.py  px_prior_1.txt  sample_utils.py  sampler.py  sky_scrambles.py  timing.py  timing_2.py  version_checker.py
enterprise_extensions/GibbsMethod/: BayesPower.py
enterprise_extensions/altpol/: altmodel.py  altorfs.py  altutils.py
enterprise_extensions/chromatic/: ACE_SWEPAM_daily_proton_density_1998_2018_MJD_cm-3.txt  README.md  __init__.py  chromatic.py  solar_wind.py
tests/: GibbsMethod_tests.py  altpol_tests.py  test_chromatic.py  test_enterprise_extensions.py  test_frequentist.py  test_gibbs.py  test_hypermodel.py  test_load_feathers.py  test_models.py  test_os.py  test_prior_draw_mode.py  test_sampler.py  test_timing.py
(+44 files in other folders)
