[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
    | docs
    | .enterprise_extensions
    | enterprise_extensions/src
  )/
)
'''

[tool.isort]
profile = "black"
skip_gitignore = true


[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "cython",
    "pytest-runner",
    "oldest-supported-numpy",
    "scipy"
]
build-backend = "setuptools.build_meta"