[tool.black]
line-length = 120
target_version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = ".enterprise_extensions/*"


[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "cython",
    "pytest-runner",
    "oldest-supported-numpy",
    "scipy"
]
build-backend = "setuptools.build_meta"